# rpi-particulate-sensor

./: .gitignore  README.md
docs/: connect.md  os-build..md  os-build.md  os-mount.md  overview.md  part1.md  submit-metrics.md
docs/assets/: dashboard.json
sps30-metrics/: Cargo.toml
sps30-metrics/src/: main.rs  mock_sensor.rs  real_sensor.rs
