[package]
name = "sps30-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datadog-api-client = "0.16.0"
sps30-i2c = { git = "https://github.com/cahillsf/sps30-i2c-rs", branch = "updates" }
tokio = { version = "1.47.1", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
linux-embedded-hal = "0.3"